Refactor + PersonServiceDaoTest ok